1 to 5/cmds.txt
Admin@Admins MINGW64 /e/Wampjune/www/ThapaTechnical/NodeJS
$ type null > index.js
bash: type: null: not found

Admin@Admins MINGW64 /e/Wampjune/www/ThapaTechnical/NodeJS
$ echo "" > index.css

> 3+3
6
> 10/5
2
> -5
-5
> 9-5
4
> 5+(5+5)-5
10
> x=0'
x=0'
   ^

Uncaught SyntaxError: Invalid or unexpected token
> x=0;
0
> x
0


> do
... {
... x++;
... console.log(`Value of x: ${x} ` );
... }while(x<5);
Value of x: 1
Value of x: 2
Value of x: 3
Value of x: 4
Value of x: 5


> 5+5
10
> _
10
> _+10
20
>


> .editor
// Entering editor mode (Ctrl+D to finish, Ctrl+C to cancel)

> .editor
// Entering editor mode (Ctrl+D to finish, Ctrl+C to cancel)
const name = (myname) => { console.log(`my name is ${myname}`);  }
name("jimi");
my name is jimi
undefined
>

tab tab ->
|
v


>
AbortController       AbortSignal           AggregateError        Array                 ArrayBuffer           Atomics
BigInt                BigInt64Array         BigUint64Array        Boolean               Buffer                DataView
Date                  Error                 EvalError             Event                 EventTarget           FinalizationRegistry
Float32Array          Float64Array          Function              Infinity              Int16Array            Int32Array
Int8Array             Intl                  JSON                  Map                   Math                  MessageChannel
MessageEvent          MessagePort           NaN                   Number                Object                Promise
Proxy                 RangeError            ReferenceError        Reflect               RegExp                Set
SharedArrayBuffer     String                Symbol                SyntaxError           TextDecoder           TextEncoder
TypeError             URIError              URL                   URLSearchParams       Uint16Array           Uint32Array
Uint8Array            Uint8ClampedArray     WeakMap               WeakRef               WeakSet               WebAssembly
_                     _error                assert                async_hooks           atob                  btoa
buffer                child_process         clearImmediate        clearInterval         clearTimeout          cluster
console               constants             crypto                decodeURI             decodeURIComponent    dgram
diagnostics_channel   dns                   domain                encodeURI             encodeURIComponent    escape
eval                  events                fs                    global                globalThis            http
http2                 https                 inspector             isFinite              isNaN                 module
net                   os                    parseFloat            parseInt              path                  perf_hooks
performance           process               punycode              querystring           queueMicrotask        readline
repl                  require               setImmediate          setInterval           setTimeout            stream
string_decoder        sys                   timers                tls                   trace_events          tty
undefined             unescape              url                   util                  v8                    vm
wasi                  worker_threads        x                     zlib

__proto__             hasOwnProperty        isPrototypeOf         propertyIsEnumerable  toLocaleString        toString
valueOf

constructor

name

>

